# ros2_projects

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_dd_robot/share/my_dd_robot/: local_setup.sh  package.sh
install/my_gesture_arm_robot/share/my_gesture_arm_robot/: package.zsh
install/my_msg_srv/share/my_msg_srv/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/my_msgs/share/my_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_pkg_01/lib/my_pkg_01/: pose_color_change  set_pen_client
install/my_pkg_01/share/my_pkg_01/: package.ps1  (+3 more)
log/: latest_build  latest_list
src/install/: local_setup.sh  setup.sh
src/log/: latest_build  latest_test
src/my_dd_robot/: CMakeLists.txt  package.xml
src/my_gesture_arm_robot/: CMakeLists.txt  package.xml
src/my_gesture_arm_robot/launch/: my_gesture_arm.launch.py
src/my_gesture_arm_robot/model/: my_gesture_arm_gazebo.gazebo  my_gesture_arm_model.xacro
src/my_gesture_arm_robot/worlds/: empty.world
src/my_msg_srv/: CMakeLists.txt  package.xml
src/my_msgs/: CMakeLists.txt
src/my_pkg_01/: setup.cfg  setup.py
src/my_pkg_01/my_pkg_01/: my_pub_node.py  pose_color_change.py  pub_node.py
src/my_pkg_prac/: setup.cfg  setup.py
src/my_pkg_prac/my_pkg_prac/: move_circular.py  my_pose_sub.py  my_pub_node.py  pen_change.py  pub_sub_node.py
src/my_services/: setup.py
src/turtle_control/: package.xml  setup.py
src/turtle_control/turtle_control/: pub_sub.py
(+356 files in other folders)
